Cleanup test in spring-shell-core