@@ -1,5 +1,5 @@
 /*
- * Copyright 2022-2023 the original author or authors.
+ * Copyright 2022-present the original author or authors.
  *
  * Licensed under the Apache License, Version 2.0 (the "License");
  * you may not use this file except in compliance with the License.
@@ -15,7 +15,6 @@
  */
 package org.springframework.shell.command;
 
-import java.util.Arrays;
 import java.util.List;
 
 import org.junit.jupiter.api.Test;
@@ -38,7 +37,7 @@ class CommandParserExceptionResolverTests {
 
 	static CommandParserExceptionsException genericParserException() {
 		CommandParserException e = new CommandParserException("hi");
-		List<CommandParserException> parserExceptions = Arrays.asList(e);
+		List<CommandParserException> parserExceptions = List.of(e);
 		return new CommandParserExceptionsException("msg", parserExceptions);
 	}
 }
