@@ -1,5 +1,5 @@
 /*
- * Copyright 2023 the original author or authors.
+ * Copyright 2023-present the original author or authors.
  *
  * Licensed under the Apache License, Version 2.0 (the "License");
  * you may not use this file except in compliance with the License.
@@ -15,7 +15,7 @@
  */
 package org.springframework.shell.command.parser;
 
-import java.util.Arrays;
+import java.util.List;
 import java.util.Map;
 
 import org.junit.jupiter.api.Test;
@@ -110,12 +110,8 @@ class CommandModelTests extends AbstractParsingTests {
 			assertThat(root1.registration).isNull();
 			assertThat(root1.getValidTokens()).satisfies(map -> {
 				assertThat(map).hasSize(2);
-				assertThat(map).hasEntrySatisfying("sub1", token -> {
-					assertThat(token.getType()).isEqualTo(TokenType.COMMAND);
-				});
-				assertThat(map).hasEntrySatisfying("sub2", token -> {
-					assertThat(token.getType()).isEqualTo(TokenType.COMMAND);
-				});
+				assertThat(map).hasEntrySatisfying("sub1", token -> assertThat(token.getType()).isEqualTo(TokenType.COMMAND));
+				assertThat(map).hasEntrySatisfying("sub2", token -> assertThat(token.getType()).isEqualTo(TokenType.COMMAND));
 			});
 			assertThat(root1.getChildren()).satisfiesExactlyInAnyOrder(
 				sub1 -> {
@@ -155,27 +151,16 @@ class CommandModelTests extends AbstractParsingTests {
 			assertThat(root1.registration).isNull();
 			assertThat(root1.getValidTokens()).satisfies(map -> {
 				assertThat(map).hasSize(1);
-				assertThat(map).hasEntrySatisfying("sub1", token -> {
-					assertThat(token.getType()).isEqualTo(TokenType.COMMAND);
-				});
+				assertThat(map).hasEntrySatisfying("sub1", token -> assertThat(token.getType()).isEqualTo(TokenType.COMMAND));
 			});
 			assertThat(root1.getChildren()).satisfiesExactlyInAnyOrder(
 				sub1 -> {
 					assertThat(sub1.command).isEqualTo("sub1");
 					assertThat(sub1.getChildren()).satisfiesExactlyInAnyOrder(
-						sub2 -> {
-							assertThat(sub2.getChildren()).isEmpty();
-						},
-						sub3 -> {
-							assertThat(sub3.getChildren()).isEmpty();
-						},
-						sub4 -> {
-							assertThat(sub4.getChildren()).isEmpty();
-						}
+						sub2 -> assertThat(sub2.getChildren()).isEmpty(),
+						sub3 -> assertThat(sub3.getChildren()).isEmpty(),
+						sub4 -> assertThat(sub4.getChildren()).isEmpty()
 					);
-					// assertThat(sub1).isNotNull();
-					// assertThat(sub1.getChildren()).isEmpty();
-					// assertThat(sub1.registration).isNotNull();
 				}
 			);
 		});
@@ -186,7 +171,7 @@ class CommandModelTests extends AbstractParsingTests {
 		register(ROOT2_SUB1);
 		CommandModel model = commandModel();
 
-		assertThat(model.resolve(Arrays.asList("root2", "sub1"))).isNotNull();
+		assertThat(model.resolve(List.of("root2", "sub1"))).isNotNull();
 	}
 
 	@Test
@@ -195,10 +180,8 @@ class CommandModelTests extends AbstractParsingTests {
 		register(ROOT2_SUB1_SUB2);
 		CommandModel model = commandModel();
 
-		assertThat(model.resolve(Arrays.asList("root2"))).satisfies(
-			info -> {
-				assertThat(info.registration).isNotNull();
-			}
+		assertThat(model.resolve(List.of("root2"))).satisfies(
+			info -> assertThat(info.registration).isNotNull()
 		);
 	}
 }
