@@ -1,5 +1,5 @@
 /*
- * Copyright 2022 the original author or authors.
+ * Copyright 2022-present the original author or authors.
  *
  * Licensed under the Apache License, Version 2.0 (the "License");
  * you may not use this file except in compliance with the License.
@@ -15,7 +15,6 @@
  */
 package org.springframework.shell.component;
 
-import java.util.Arrays;
 import java.util.List;
 import java.util.stream.Stream;
 
@@ -29,56 +28,56 @@ import org.springframework.shell.style.PartsText.PartText;
 
 import static org.assertj.core.api.Assertions.assertThat;
 
-public class PathSearchTests {
+class PathSearchTests {
 
 	static Stream<Arguments> testParts() {
 		return Stream.of(
 			Arguments.of("0", new int[] { 0 },
-				Arrays.asList(PartText.of("0", true))),
+				List.of(PartText.of("0", true))),
 			Arguments.of("01", new int[] { 0, 1 },
-				Arrays.asList(
+				List.of(
 					PartText.of("0", true),
 					PartText.of("1", true))),
 			Arguments.of("012", new int[] { 0, 1, 2 },
-				Arrays.asList(
+				List.of(
 					PartText.of("0", true),
 					PartText.of("1", true),
 					PartText.of("2", true))),
 			Arguments.of("0123456789", new int[0],
-				Arrays.asList(PartText.of("0123456789", false))),
+				List.of(PartText.of("0123456789", false))),
 			Arguments.of("0123456789", new int[] { 0 },
-				Arrays.asList(
+				List.of(
 					PartText.of("0", true),
 					PartText.of("123456789", false))),
 			Arguments.of("0123456789", new int[] { 1 },
-				Arrays.asList(
+				List.of(
 					PartText.of("0", false),
 					PartText.of("1", true),
 					PartText.of("23456789", false))),
 			Arguments.of("0123456789", new int[] { 9 },
-				Arrays.asList(
+				List.of(
 					PartText.of("012345678", false),
 					PartText.of("9", true))),
 			Arguments.of("0123456789", new int[] { 2, 5 },
-				Arrays.asList(
+				List.of(
 					PartText.of("01", false),
 					PartText.of("2", true),
 					PartText.of("34", false),
 					PartText.of("5", true),
 					PartText.of("6789", false))),
 			Arguments.of("0123456789", new int[] { 2, 3 },
-				Arrays.asList(
+				List.of(
 					PartText.of("01", false),
 					PartText.of("2", true),
 					PartText.of("3", true),
 					PartText.of("456789", false))),
 			Arguments.of("0123456789", new int[] { 8, 9 },
-				Arrays.asList(
+				List.of(
 					PartText.of("01234567", false),
 					PartText.of("8", true),
 					PartText.of("9", true))),
 			Arguments.of("spring-shell-core/build/test-results/test/TEST-org.springframework.shell.support.search.FuzzyMatchV2SearchMatchAlgorithmTests.xml", new int[] { 13, 33, 59, 67, 73 },
-				Arrays.asList(
+				List.of(
 					PartText.of("spring-shell-", false),
 					PartText.of("c", true),
 					PartText.of("ore/build/test-resu", false),
