@@ -1,5 +1,5 @@
 /*
- * Copyright 2022-2023 the original author or authors.
+ * Copyright 2022-present the original author or authors.
  *
  * Licensed under the Apache License, Version 2.0 (the "License");
  * you may not use this file except in compliance with the License.
@@ -16,14 +16,13 @@
 package org.springframework.shell.component.flow;
 
 import java.nio.file.Path;
-import java.util.Arrays;
+import java.time.Duration;
 import java.util.HashMap;
 import java.util.List;
 import java.util.Map;
 import java.util.concurrent.CountDownLatch;
 import java.util.concurrent.ExecutorService;
 import java.util.concurrent.Executors;
-import java.util.concurrent.TimeUnit;
 import java.util.concurrent.atomic.AtomicReference;
 
 import org.junit.jupiter.api.Test;
@@ -33,15 +32,16 @@ import org.springframework.shell.component.flow.ComponentFlow.ComponentFlowResul
 import org.springframework.test.util.ReflectionTestUtils;
 
 import static org.assertj.core.api.Assertions.assertThat;
+import static org.awaitility.Awaitility.await;
 
-public class ComponentFlowTests extends AbstractShellTests {
+class ComponentFlowTests extends AbstractShellTests {
 
 	@Test
-	public void testSimpleFlow() throws InterruptedException {
+	void testSimpleFlow() {
 		Map<String, String> single1SelectItems = new HashMap<>();
 		single1SelectItems.put("key1", "value1");
 		single1SelectItems.put("key2", "value2");
-		List<SelectItem> multi1SelectItems = Arrays.asList(SelectItem.of("key1", "value1"),
+		List<SelectItem> multi1SelectItems = List.of(SelectItem.of("key1", "value1"),
 				SelectItem.of("key2", "value2"), SelectItem.of("key3", "value3"));
 		ComponentFlow wizard = ComponentFlow.builder()
 				.terminal(getTerminal())
@@ -68,13 +68,9 @@ public class ComponentFlowTests extends AbstractShellTests {
 				.build();
 
 		ExecutorService service = Executors.newFixedThreadPool(1);
-		CountDownLatch latch = new CountDownLatch(1);
 		AtomicReference<ComponentFlowResult> result = new AtomicReference<>();
 
-		service.execute(() -> {
-			result.set(wizard.run());
-			latch.countDown();
-		});
+		service.execute(() -> result.set(wizard.run()));
 
 		// field1
 		TestBuffer testBuffer = new TestBuffer().cr();
@@ -92,24 +88,26 @@ public class ComponentFlowTests extends AbstractShellTests {
 		testBuffer = new TestBuffer().ctrlE().space().cr();
 		write(testBuffer.getBytes());
 
-		latch.await(4, TimeUnit.SECONDS);
-		ComponentFlowResult inputWizardResult = result.get();
-		assertThat(inputWizardResult).isNotNull();
-		String field1 = inputWizardResult.getContext().get("field1");
-		String field2 = inputWizardResult.getContext().get("field2");
-		Path path1 = inputWizardResult.getContext().get("path1");
-		String single1 = inputWizardResult.getContext().get("single1");
-		List<String> multi1 = inputWizardResult.getContext().get("multi1");
-		assertThat(field1).isEqualTo("defaultField1Value");
-		assertThat(field2).isEqualTo("Field2Value");
-		assertThat(path1.toString()).contains("fakedir");
-		assertThat(single1).isEqualTo("value1");
-		assertThat(multi1).containsExactlyInAnyOrder("value2");
-		assertThat(consoleOut()).contains("Field1 defaultField1Value");
+		await().atMost(Duration.ofSeconds(4)).untilAsserted(() -> {
+			ComponentFlowResult inputWizardResult = result.get();
+			assertThat(inputWizardResult).isNotNull();
+			String field1 = inputWizardResult.getContext().get("field1");
+			String field2 = inputWizardResult.getContext().get("field2");
+			Path path1 = inputWizardResult.getContext().get("path1");
+			String single1 = inputWizardResult.getContext().get("single1");
+			List<String> multi1 = inputWizardResult.getContext().get("multi1");
+			assertThat(field1).isEqualTo("defaultField1Value");
+			assertThat(field2).isEqualTo("Field2Value");
+			assertThat(path1.toString()).contains("fakedir");
+			assertThat(single1).isEqualTo("value1");
+			assertThat(multi1).containsExactlyInAnyOrder("value2");
+			assertThat(consoleOut()).contains("Field1 defaultField1Value");
+		});
+
 	}
 
 	@Test
-	public void testSkipsGivenComponents() throws InterruptedException {
+	void testSkipsGivenComponents() {
 		ComponentFlow wizard = ComponentFlow.builder()
 			.terminal(getTerminal())
 			.withStringInput("id1")
@@ -127,7 +125,7 @@ public class ComponentFlowTests extends AbstractShellTests {
 				.resultMode(ResultMode.ACCEPT)
 				.and()
 			.withMultiItemSelector("id4")
-				.resultValues(Arrays.asList("value4"))
+				.resultValues(List.of("value4"))
 				.resultMode(ResultMode.ACCEPT)
 				.and()
 			.withConfirmationInput("id5")
@@ -137,15 +135,11 @@ public class ComponentFlowTests extends AbstractShellTests {
 			.build();
 
 			ExecutorService service = Executors.newFixedThreadPool(1);
-			CountDownLatch latch = new CountDownLatch(1);
 			AtomicReference<ComponentFlowResult> result = new AtomicReference<>();
 
-			service.execute(() -> {
-				result.set(wizard.run());
-				latch.countDown();
-			});
+			service.execute(() -> result.set(wizard.run()));
 
-			latch.await(4, TimeUnit.SECONDS);
+		await().atMost(Duration.ofSeconds(4)).untilAsserted(() -> {
 			ComponentFlowResult inputWizardResult = result.get();
 			assertThat(inputWizardResult).isNotNull();
 
@@ -160,10 +154,11 @@ public class ComponentFlowTests extends AbstractShellTests {
 			assertThat(id3).isEqualTo("value3");
 			assertThat(id4).containsExactlyInAnyOrder("value4");
 			assertThat(id5).isFalse();
-		}
+		});
+	}
 
 	@Test
-	public void testChoosesDynamicallyShouldJumpOverAndStop() throws InterruptedException {
+	void testChoosesDynamicallyShouldJumpOverAndStop() {
 		ComponentFlow wizard = ComponentFlow.builder()
 			.terminal(getTerminal())
 			.resourceLoader(getResourceLoader())
@@ -187,12 +182,8 @@ public class ComponentFlowTests extends AbstractShellTests {
 			.build();
 
 		ExecutorService service = Executors.newFixedThreadPool(1);
-		CountDownLatch latch = new CountDownLatch(1);
 		AtomicReference<ComponentFlowResult> result = new AtomicReference<>();
-		service.execute(() -> {
-			result.set(wizard.run());
-			latch.countDown();
-		});
+		service.execute(() -> result.set(wizard.run()));
 
 		// id1
 		TestBuffer testBuffer = new TestBuffer().append("id3").cr();
@@ -200,18 +191,20 @@ public class ComponentFlowTests extends AbstractShellTests {
 		// id3
 		testBuffer = new TestBuffer().cr();
 		write(testBuffer.getBytes());
-		latch.await(4, TimeUnit.SECONDS);
-		ComponentFlowResult inputWizardResult = result.get();
-		assertThat(inputWizardResult).isNotNull();
-		String id1 = inputWizardResult.getContext().get("id1");
-		String id3 = inputWizardResult.getContext().get("id3");
-		assertThat(id1).isEqualTo("id3");
-		assertThat(id3).isEqualTo("value3");
-		assertThat(inputWizardResult.getContext().containsKey("id2")).isFalse();
+
+		await().atMost(Duration.ofSeconds(4)).untilAsserted(() -> {
+			ComponentFlowResult inputWizardResult = result.get();
+			assertThat(inputWizardResult).isNotNull();
+			String id1 = inputWizardResult.getContext().get("id1");
+			String id3 = inputWizardResult.getContext().get("id3");
+			assertThat(id1).isEqualTo("id3");
+			assertThat(id3).isEqualTo("value3");
+			assertThat(inputWizardResult.getContext().containsKey("id2")).isFalse();
+		});
 	}
 
 	@Test
-	public void testChoosesDynamicallyShouldNotContinueToNext() throws InterruptedException {
+	void testChoosesDynamicallyShouldNotContinueToNext() {
 		ComponentFlow wizard = ComponentFlow.builder()
 			.terminal(getTerminal())
 			.resourceLoader(getResourceLoader())
@@ -248,18 +241,20 @@ public class ComponentFlowTests extends AbstractShellTests {
 		// id2
 		testBuffer = new TestBuffer().cr();
 		write(testBuffer.getBytes());
-		latch.await(4, TimeUnit.SECONDS);
-		ComponentFlowResult inputWizardResult = result.get();
-		assertThat(inputWizardResult).isNotNull();
-		String id1 = inputWizardResult.getContext().get("id1");
-		String id2 = inputWizardResult.getContext().get("id2");
-		assertThat(id1).isEqualTo("id2");
-		assertThat(id2).isEqualTo("value2");
-		assertThat(inputWizardResult.getContext().containsKey("id3")).isFalse();
+
+		await().atMost(Duration.ofSeconds(4)).untilAsserted(() -> {
+			ComponentFlowResult inputWizardResult = result.get();
+			assertThat(inputWizardResult).isNotNull();
+			String id1 = inputWizardResult.getContext().get("id1");
+			String id2 = inputWizardResult.getContext().get("id2");
+			assertThat(id1).isEqualTo("id2");
+			assertThat(id2).isEqualTo("value2");
+			assertThat(inputWizardResult.getContext().containsKey("id3")).isFalse();
+		});
 	}
 
 	@Test
-	public void testChoosesNonExistingComponent() throws InterruptedException {
+	void testChoosesNonExistingComponent() {
 		ComponentFlow wizard = ComponentFlow.builder()
 			.terminal(getTerminal())
 			.resourceLoader(getResourceLoader())
@@ -283,12 +278,8 @@ public class ComponentFlowTests extends AbstractShellTests {
 			.build();
 
 		ExecutorService service = Executors.newFixedThreadPool(1);
-		CountDownLatch latch = new CountDownLatch(1);
 		AtomicReference<ComponentFlowResult> result = new AtomicReference<>();
-		service.execute(() -> {
-			result.set(wizard.run());
-			latch.countDown();
-		});
+		service.execute(() -> result.set(wizard.run()));
 
 		// id1
 		TestBuffer testBuffer = new TestBuffer().append("fake").cr();
@@ -297,17 +288,19 @@ public class ComponentFlowTests extends AbstractShellTests {
 		// don't execute id2 or id3
 		testBuffer = new TestBuffer().cr();
 		write(testBuffer.getBytes());
-		latch.await(4, TimeUnit.SECONDS);
-		ComponentFlowResult inputWizardResult = result.get();
-		assertThat(inputWizardResult).isNotNull();
-		String id1 = inputWizardResult.getContext().get("id1");
-		assertThat(id1).isEqualTo("fake");
-		assertThat(inputWizardResult.getContext().containsKey("id2")).isFalse();
-		assertThat(inputWizardResult.getContext().containsKey("id3")).isFalse();
+
+		await().atMost(Duration.ofSeconds(4)).untilAsserted(() -> {
+			ComponentFlowResult inputWizardResult = result.get();
+			assertThat(inputWizardResult).isNotNull();
+			String id1 = inputWizardResult.getContext().get("id1");
+			assertThat(id1).isEqualTo("fake");
+			assertThat(inputWizardResult.getContext().containsKey("id2")).isFalse();
+			assertThat(inputWizardResult.getContext().containsKey("id3")).isFalse();
+		});
 	}
 
 	@Test
-	public void testAutoShowsDefault() throws InterruptedException {
+	void testAutoShowsDefault() {
 		Map<String, String> single1SelectItems = new HashMap<>();
 		single1SelectItems.put("key1", "value1");
 		single1SelectItems.put("key2", "value2");
@@ -323,29 +316,26 @@ public class ComponentFlowTests extends AbstractShellTests {
 				.build();
 
 		ExecutorService service = Executors.newFixedThreadPool(1);
-		CountDownLatch latch = new CountDownLatch(1);
 		AtomicReference<ComponentFlowResult> result = new AtomicReference<>();
 
-		service.execute(() -> {
-			result.set(wizard.run());
-			latch.countDown();
-		});
+		service.execute(() -> result.set(wizard.run()));
 
 		TestBuffer testBuffer = new TestBuffer();
 		testBuffer = new TestBuffer().cr();
 		write(testBuffer.getBytes());
 
-		latch.await(4, TimeUnit.SECONDS);
-		ComponentFlowResult inputWizardResult = result.get();
-		assertThat(inputWizardResult).isNotNull();
-		String single1 = inputWizardResult.getContext().get("single1");
-		assertThat(single1).isEqualTo("value2");
+		await().atMost(Duration.ofSeconds(4)).untilAsserted(() -> {
+			ComponentFlowResult inputWizardResult = result.get();
+			assertThat(inputWizardResult).isNotNull();
+			String single1 = inputWizardResult.getContext().get("single1");
+			assertThat(single1).isEqualTo("value2");
+		});
 	}
 
 	@Test
 	@SuppressWarnings("unchecked")
-	public void testBuilderSingleTypes() {
-		List<SelectItem> selectItems1 = Arrays.asList(SelectItem.of("key1", "value1"), SelectItem.of("key2", "value2"));
+	void testBuilderSingleTypes() {
+		List<SelectItem> selectItems1 = List.of(SelectItem.of("key1", "value1"), SelectItem.of("key2", "value2"));
 		Map<String, String> selectItems2 = new HashMap<>();
 		selectItems2.put("key2", "value2");
 		selectItems2.put("key3", "value3");
