@@ -1,5 +1,5 @@
 /*
- * Copyright 2023-2024 the original author or authors.
+ * Copyright 2023-present the original author or authors.
  *
  * Licensed under the Apache License, Version 2.0 (the "License");
  * you may not use this file except in compliance with the License.
@@ -16,9 +16,7 @@
 package org.springframework.shell.component.view.control;
 
 import java.time.Duration;
-import java.util.Arrays;
 import java.util.List;
-import java.util.stream.Collectors;
 
 import org.junit.jupiter.api.BeforeEach;
 import org.junit.jupiter.api.Nested;
@@ -45,20 +43,20 @@ class StatusBarViewTests extends AbstractViewTests {
 			StatusBarView view;
 
 			view = new StatusBarView();
-			assertThat(view.getItems()).hasSize(0);
+			assertThat(view.getItems()).isEmpty();
 
 			view = new StatusBarView(new StatusItem[] {
 				new StatusItem("item1")
 			});
 			assertThat(view.getItems()).hasSize(1);
 
-			view = new StatusBarView(Arrays.asList(new StatusItem("item1")));
+			view = new StatusBarView(List.of(new StatusItem("item1")));
 			assertThat(view.getItems()).hasSize(1);
 
-			view = new StatusBarView(Arrays.asList(StatusItem.of("item1")));
+			view = new StatusBarView(List.of(StatusItem.of("item1")));
 			assertThat(view.getItems()).hasSize(1);
 
-			view = new StatusBarView(Arrays.asList(StatusItem.of("item1", null, null, false, 1)));
+			view = new StatusBarView(List.of(StatusItem.of("item1", null, null, false, 1)));
 			assertThat(view.getItems()).hasSize(1);
 
 		}
@@ -91,11 +89,11 @@ class StatusBarViewTests extends AbstractViewTests {
 			});
 			view.setRect(0, 0, 10, 1);
 
-			item = (StatusItem) ReflectionTestUtils.invokeMethod(view, "itemAt", 0, 0);
+			item = ReflectionTestUtils.invokeMethod(view, "itemAt", 0, 0);
 			assertThat(item).isNotNull();
 			assertThat(item.getTitle()).isEqualTo("item1");
 
-			item = (StatusItem) ReflectionTestUtils.invokeMethod(view, "itemAt", 7, 0);
+			item = ReflectionTestUtils.invokeMethod(view, "itemAt", 7, 0);
 			assertThat(item).isNotNull();
 			assertThat(item.getTitle()).isEqualTo("item2");
 		}
@@ -136,28 +134,28 @@ class StatusBarViewTests extends AbstractViewTests {
 
 		@Test
 		void defaultsOrderNotChanged() {
-			view = new StatusBarView(Arrays.asList(p_0_1, p_0_2, p_0_3));
+			view = new StatusBarView(List.of(p_0_1, p_0_2, p_0_3));
 			assertThat(extractTitles()).containsExactly("p_0_1", "p_0_2", "p_0_3");
 		}
 
 		@Test
 		void primaryBeforeNonprimary() {
-			view = new StatusBarView(Arrays.asList(p_0_1, n_0_1));
+			view = new StatusBarView(List.of(p_0_1, n_0_1));
 			assertThat(extractTitles()).containsExactly("p_0_1", "n_0_1");
-			view = new StatusBarView(Arrays.asList(n_0_1, p_0_1));
+			view = new StatusBarView(List.of(n_0_1, p_0_1));
 			assertThat(extractTitles()).containsExactly("p_0_1", "n_0_1");
 		}
 
 		@Test
 		void priorityTakesOrder() {
-			view = new StatusBarView(Arrays.asList(p_0_1, p_1_1, p_2_1));
+			view = new StatusBarView(List.of(p_0_1, p_1_1, p_2_1));
 			assertThat(extractTitles()).containsExactly("p_0_1", "p_1_1", "p_2_1");
-			view = new StatusBarView(Arrays.asList(p_2_1, p_0_1, p_1_1));
+			view = new StatusBarView(List.of(p_2_1, p_0_1, p_1_1));
 			assertThat(extractTitles()).containsExactly("p_0_1", "p_1_1", "p_2_1");
 		}
 
 		private List<String> extractTitles() {
-			return view.getItems().stream().map(StatusItem::getTitle).collect(Collectors.toList());
+			return view.getItems().stream().map(StatusItem::getTitle).toList();
 		}
 
 	}
@@ -178,7 +176,7 @@ class StatusBarViewTests extends AbstractViewTests {
 		void primaryItems() {
 			StatusItem item1 = new StatusItem("item1");
 			StatusItem item2 = new StatusItem("item2");
-			StatusBarView view = new StatusBarView(Arrays.asList(item1, item2));
+			StatusBarView view = new StatusBarView(List.of(item1, item2));
 			view.setItemSeparator(null);
 			view.setRect(0, 0, 80, 1);
 			view.draw(screen1x80);
@@ -192,7 +190,7 @@ class StatusBarViewTests extends AbstractViewTests {
 			StatusItem item2 = new StatusItem("item2");
 			item1.setPrimary(false);
 			item2.setPrimary(false);
-			StatusBarView view = new StatusBarView(Arrays.asList(item1, item2));
+			StatusBarView view = new StatusBarView(List.of(item1, item2));
 			view.setItemSeparator(null);
 			view.setRect(0, 0, 80, 1);
 			view.draw(screen1x80);
@@ -205,7 +203,7 @@ class StatusBarViewTests extends AbstractViewTests {
 			StatusItem item1 = new StatusItem("item1");
 			StatusItem item2 = new StatusItem("item2");
 			item2.setPrimary(false);
-			StatusBarView view = new StatusBarView(Arrays.asList(item1, item2));
+			StatusBarView view = new StatusBarView(List.of(item1, item2));
 			view.setItemSeparator(null);
 			view.setRect(0, 0, 80, 1);
 			view.draw(screen1x80);
@@ -216,7 +214,7 @@ class StatusBarViewTests extends AbstractViewTests {
 		@Test
 		void canChangeText() {
 			StatusItem item1 = new StatusItem("item1");
-			StatusBarView view = new StatusBarView(Arrays.asList(item1));
+			StatusBarView view = new StatusBarView(List.of(item1));
 			view.setItemSeparator(null);
 			view.setRect(0, 0, 80, 1);
 			view.draw(screen1x80);
@@ -234,7 +232,7 @@ class StatusBarViewTests extends AbstractViewTests {
 			item3.setPrimary(false);
 			StatusItem item4 = new StatusItem("item4");
 			item4.setPrimary(false);
-			StatusBarView view = new StatusBarView(Arrays.asList(item1, item2, item3, item4));
+			StatusBarView view = new StatusBarView(List.of(item1, item2, item3, item4));
 			view.setRect(0, 0, 80, 1);
 			view.draw(screen1x80);
 			assertThat(forScreen(screen1x80)).hasHorizontalText("item1 | ", 0, 0, 8);
@@ -254,7 +252,7 @@ class StatusBarViewTests extends AbstractViewTests {
 			StatusItem item1 = new StatusItem("item11111111111111111111111111");
 			StatusItem item2 = new StatusItem("item22222222222222222222222222");
 			StatusItem item3 = new StatusItem("item33333333333333333333333333");
-			StatusBarView view = new StatusBarView(Arrays.asList(item1, item2, item3));
+			StatusBarView view = new StatusBarView(List.of(item1, item2, item3));
 			view.setItemSeparator(null);
 			view.setRect(0, 0, 80, 1);
 			view.draw(screen1x80);
@@ -267,7 +265,7 @@ class StatusBarViewTests extends AbstractViewTests {
 		void nullTitleDontDraw() {
 			StatusItem item1 = new StatusItem("item1");
 			StatusItem item2 = new StatusItem(null);
-			StatusBarView view = new StatusBarView(Arrays.asList(item1, item2));
+			StatusBarView view = new StatusBarView(List.of(item1, item2));
 			view.setItemSeparator(null);
 			view.setRect(0, 0, 80, 1);
 			view.draw(screen1x80);
